# End-to-End-Car-Insurance-Prediction

./: .dockerignore  .env.example  .gitignore  DATABASE_SETUP.md  Dockerfile  README.md  app.py  docker-compose.yml  dvc.yaml  dvc_commands.py  dvc_pipeline.py  dvc_with_env.py  final_verification.py  fix_mlflow.py  params.yaml  pyproject.toml  requirements.txt  run_dvc_pipeline.py  setup.py  templates.py  test.py  test_env.py  test_fix.py  test_minimal.py  test_mlflow.py  test_mlflow_fix.py
.github/workflows/: ci-cd.yml
config/: hyperparameters.yaml  model.yaml  schema.yaml
metrics/: .gitignore  model_evaluation.json
mlruns/0/: meta.yaml
mlruns/0/6b0544aa3d6348b7954156071608dd0c/: meta.yaml
mlruns/0/899754f44f084425aeea27426b5b06d2/: meta.yaml
models/: .gitignore
reports/: .gitignore  drift_report.yaml
src/insurance_charges/cloud_storage/: aws_storage.py
src/insurance_charges/components/: data_analysis.py  data_ingestion.py  data_quality.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/insurance_charges/configuration/: aws_connection.py  postgres_db_connection.py
src/insurance_charges/constants/: __init__.py
src/insurance_charges/entity/: estimator.py  (+3 more)
static/css/: style.css
templates/: insurance.html
tests/: force_mlflow_s3.py  permanent_mlflow_fix.py  quick_check_verification.py  test_artifacts.py  test_aws_credentials.py  test_comprehensive.py  test_local_flow.py  test_mlflow_artifact.py  test_mlflow_fix.py  test_s3_connection.py  test_s3_status.py  test_simple.py  verify_s3_final.py
(+24 files in other folders)
