[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance_charges"
version = "1.0.0"
description = "Car Insurance Prediction Model"
authors = [
    {name = "Goutham", email = "gouthamudayagiri@gmail.com"}
]
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.25.2", 
    "scikit-learn>=1.3.2",
]

[tool.setuptools]
package-dir = {"": "src"}